--- a/styles/room.module.css
+++ b/styles/room.module.css
@@ -1,14 +1,25 @@
 .activePlayerContainer {
+  /* @apply absolute w-9/12 left-0 right-0 mx-auto;
+  top: 20px;
+  bottom: 50px;
+  height: calc(100vh - 20px - 100px); */
+
+  @apply absolute flex flex-col overflow-y-auto;
+  width: 300px;
+  height: calc(100vh - 20px);
+  right: 20px;
+  top: 20px;
+}
+
+.inActivePlayerContainer {
+  /* @apply absolute flex flex-col overflow-y-auto;
+  width: 200px;
+  height: calc(100vh - 20px);
+  right: 20px;
+  top: 20px; */
+
   @apply absolute w-9/12 left-0 right-0 mx-auto;
   top: 20px;
   bottom: 50px;
   height: calc(100vh - 20px - 100px);
-}
-
-.inActivePlayerContainer {
-  @apply absolute flex flex-col overflow-y-auto;
-  width: 200px;
-  height: calc(100vh - 20px);
-  right: 20px;
-  top: 20px;
 }
